# w2c2

./: .gitignore  MODULE.bazel  WORKSPACE  build.zig
w2c2/: BUILD.bazel  convert.bzl  main.c  path.h  w2c2_base.h
wasi/: BUILD.bazel  wasi.c  wasi.h
