module(name = "w2c2",version="1.0.1")
###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "hermetic_cc_toolchain", version = "3.0.1")
git_override(
    module_name = "hermetic_cc_toolchain",
    remote = "https://github.com/portal-co/hermetic_cc_toolchain_.git",
    commit = "a1b8d78393bd7d0033eb2619d09b800dd477797e",
)
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain:wasip1_wasm",
    dev_dependency = True,
)